Fix confusing table vertical alignment

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ table td {
 table {
 	padding-left: 1em;
 	padding-right: 1em;
+	vertical-align: unset;
 }
 
 .article-list {
